compiler/testData/multiplatform/incompatibleClasses/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/incompatibleClasses/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class PClass
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:2:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect interface PInterface
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:3:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect object PObject
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:4:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect enum class PEnumClass
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:5:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect annotation class PAnnotationClass
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:7:10: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
internal expect object InternalObject
         ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:8:8: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
public expect object PublicObject
       ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:10:6: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
open expect class OpenClass
     ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:11:10: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
abstract expect class AbstractClass
         ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:12:7: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
final expect class FinalClass
      ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:14:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C1<A>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:15:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C2<B>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:16:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C3<D, E : D>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:18:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class C4<F>
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:21:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect abstract class ExtendsNumber : Number
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:23:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect fun interface FunInterface {
^^^^^^
compiler/testData/multiplatform/incompatibleClasses/common.kt:27:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect fun interface FunInterface2 {
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:1:18: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class PClass : Any
  The 'actual' declaration: actual interface PClass : Any
Reason: the class kinds are different (class, interface, object, enum, annotation)
actual interface PClass
                 ^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:2:15: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect interface PInterface : Any
  The 'actual' declaration: actual object PInterface : Any
Reason: the class kinds are different (class, interface, object, enum, annotation)
actual object PInterface
              ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:3:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect object PObject : Any
  The 'actual' declaration: actual enum class PObject : Enum<PObject>
Reason: the class kinds are different (class, interface, object, enum, annotation)
actual enum class PObject
                  ^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:4:25: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect enum class PEnumClass : Enum<PEnumClass>
  The 'actual' declaration: actual annotation class PEnumClass : Annotation
Reason: the class kinds are different (class, interface, object, enum, annotation)
actual annotation class PEnumClass
                        ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:5:14: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect annotation class PAnnotationClass : Annotation
  The 'actual' declaration: actual class PAnnotationClass : Any
Reason: the class kinds are different (class, interface, object, enum, annotation)
actual class PAnnotationClass
             ^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:7:24: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect object PublicObject : Any
  The 'actual' declaration: actual object PublicObject : Any
Reason: the visibilities are different.
  The 'expect' declaration visibility: 'public'
  The 'actual' declaration visibility: 'internal'
internal actual object PublicObject
                       ^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:10:20: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class OpenClass : Any
  The 'actual' declaration: actual class OpenClass : Any
Reason: the modalities are different.
  The 'expect' declaration modality: 'open'
  The 'actual' declaration modality: 'final'
final actual class OpenClass
                   ^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:11:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class AbstractClass : Any
  The 'actual' declaration: actual class AbstractClass : Any
Reason: the modalities are different.
  The 'expect' declaration modality: 'abstract'
  The 'actual' declaration modality: 'open'
open actual class AbstractClass
                  ^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:12:23: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class FinalClass : Any
  The 'actual' declaration: actual class FinalClass : Any
Reason: the modalities are different.
  The 'expect' declaration modality: 'final'
  The 'actual' declaration modality: 'abstract'
abstract actual class FinalClass
                      ^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:14:14: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class C1<A> : Any
  The 'actual' declaration: actual class C1<A, Extra> : Any
Reason: the number of type parameters are different
actual class C1<A, Extra>
             ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:15:14: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class C2<B> : Any
  The 'actual' declaration: actual class C2<out B> : Any
Reason: declaration-site variances of type parameters are different
actual class C2<out B>
             ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:16:14: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class C3<D, E : D> : Any
  The 'actual' declaration: actual class C3<D, E : D?> : Any
Reason: the upper bounds of type parameters are different
actual class C3<D, E : D?>
             ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:18:18: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class C4<F> : Any
  The 'actual' declaration: actual typealias C4<F> = C4Impl<F>
Reason: the upper bounds of type parameters are different
actual typealias C4<F> = C4Impl<F>
                 ^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:21:23: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class ExtendsNumber : Number
  The 'actual' declaration: actual class ExtendsNumber : Any
Reason: some supertypes are missing in the 'actual' declaration
actual abstract class ExtendsNumber : Any()
                      ^^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:23:18: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect fun interface FunInterface : Any
  The 'actual' declaration: actual interface FunInterface : Any
Reason: the 'actual' declaration for 'fun expect interface' is not a functional interface
actual interface FunInterface {
                 ^^^^^^^^^^^^
compiler/testData/multiplatform/incompatibleClasses/jvm.kt:31:18: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect fun interface FunInterface2 : Any
  The 'actual' declaration: actual typealias FunInterface2 = FunInterface2Typealias
Reason: the 'actual' declaration for 'fun expect interface' is not a functional interface
actual typealias FunInterface2 = FunInterface2Typealias
                 ^^^^^^^^^^^^^
